--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -546,6 +546,25 @@
   Url                      = {http://dl.acm.org/citation.cfm?id=1622503.1622518}
 }
 
+@InProceedings{MaderHaslhoferIsaac2012,
+  Title                    = {Finding Quality Issues in SKOS Vocabularies},
+  Author                   = {Mader, Christian and Haslhofer, Bernhard and Isaac, Antoine},
+  Booktitle                = {Proceedings of the Second International Conference on Theory and Practice of Digital Libraries},
+  Year                     = {2012},
+
+  Address                  = {Berlin, Heidelberg},
+  Pages                    = {222--233},
+  Publisher                = {Springer-Verlag},
+  Series                   = {TPDL'12},
+
+  Acmid                    = {2403864},
+  Doi                      = {10.1007/978-3-642-33290-6_25},
+  ISBN                     = {978-3-642-33289-0},
+  Location                 = {Paphos, Cyprus},
+  Numpages                 = {12},
+  Url                      = {http://dx.doi.org/10.1007/978-3-642-33290-6_25}
+}
+
 @TechReport{owl2profiles2008,
   Title                    = {OWL 2 Web Ontology Language: Profiles},
   Author                   = {Motik, Boris and Grau, Bernardo Cuenca and Horrocks, Ian and Wu, Zhe and Fokoue, Achille and Lutz, Carsten},
