--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -367,7 +367,7 @@ EXAMPLE
 
 Bosch et al. identified in total 74 requirements to formulate RDF constraints; each of them corresponding to a constraint type. 
 We published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} in which we explain each requirement (constraint type) in detail and give examples for each (represented by different constraint languages).
-The knowledge representation formalism {\em Description logics (DL)}, with its  well-studied theoretical properties, provides the foundational basis for each constraint type.
+The knowledge representation formalism \emph{Description logics (DL)}, with its  well-studied theoretical properties, provides the foundational basis for each constraint type.
 Therefore, this technical report contains mappings to DL to logically underpin each requirement and to determine which DL constructs are needed to express each constraint type \cite{BoschNolleAcarEckert2015}.
 Bosch et al. recently published a technical report\footnote{Available at: \url{http://arxiv.org/abs/XXXXX}} (serving as appendix of this paper) in which we describe RDF constraints to validate metadata on person-level and aggregated data.
 We assign each constraint to constraint types corresponding to RDF validation requirements or to data model specific constraint types
@@ -415,7 +415,7 @@ If the abstract of the survey is missing, a title of the survey has to be stated
 - variable does not have associated codes / categories
 
 \textbf{Theoretical Concepts.}
-Variables must have at least one relationship to a theoretical concept\footnote{{\em DISCO-C-MINIMUM-QUALIFIED-CARDINALITY-RESTRICTIONS-01}}.
+Variables must have at least one relationship to a theoretical concept\footnote{\emph{DISCO-C-MINIMUM-QUALIFIED-CARDINALITY-RESTRICTIONS-01}}.
 %The variables \emph{number of school years} and \emph{highest educational degree}, e.g., are associated with the theoretical concept \emph{education}. 
 The variable \emph{Education at pre-school}, e.g., is associated with the theoretical concept \emph{education}. 
 The severity level of this constraint is \emph{warning} and not \emph{error}, as research can be continued without an associated theoretical concept.
@@ -432,7 +432,7 @@ Thus, the severity level of the first three constraints is stronger than the sev
 If the intention of the researcher is to perform more detailed comparisons (use case 2), however, the violation of the remaining constraints is also more serious.
 
 Constraints of the constraint type \emph{Context-Specific Exclusive OR of Property Groups}
-restrict individuals of given classes to have only one of multiple property groups\footnote{{\em R-13-DISJOINT-GROUP-OF-PROPERTIES-CLASS-SPECIFIC}}.
+restrict individuals of given classes to have only one of multiple property groups\footnote{\emph{R-13-DISJOINT-GROUP-OF-PROPERTIES-CLASS-SPECIFIC}}.
 Within the context of \emph{Disco}, \emph{skos:Concept}s can have either \emph{skos:definition} (when interpreted as theoretical concepts) or \emph{skos:notation} and \emph{skos:prefLabel} properties (when interpreted as codes and categories), but not both\footnote{\emph{DISCO-C-CONTEXT-SPECIFIC-EXCLUSIVE-OR-OF-PROPERTY-GROUPS-01:}}.
 
 \begin{DL}
@@ -443,23 +443,63 @@ B $\sqsubseteq$ $\geq$ 1 prefLabel.string $\sqcap$ $\leq$ 1 prefLabel.string \\
 C $\sqsubseteq$ $\geq$ 1 definition.string $\sqcap$ $\leq$ 1 definition.string \\
 \end{DL}
 
+It is useful to declare properties to be conditional, i.e. if particular properties exist, then specific other properties must also be present (\emph{conditional properties})\footnote{{\em R-71-CONDITIONAL-PROPERTIES}\label{R-71-CONDITIONAL-PROPERTIES}}.
+If a {\em skos:Concept} represents a code (having a {\em skos:notation} property) and a category (having a {\em skos:prefLabel} property), 
+then the property {\em disco:isValid} has to be stated indicating if the code is valid (\emph{true}) or missing (\emph{false}).
+%\footref{R-71-CONDITIONAL-PROPERTIES}
+
 -----
 
-Restricting data property ranges [$V_{min}$,$V_{max}$] within the context of given classes is a very common requirement (\emph{Literal Ranges}\footnote{{\em R-45-RANGES-OF-RDF-LITERAL-VALUES}}) 
-- disco:CategoryStatistics resources, e.g., point to percentage values via the data property {\em disco:percentage}; 
-these values must be of the datatype {\em xsd:double} and must be between 0 and 100.
+Restricting data property ranges [$V_{min}$,$V_{max}$] within the context of given classes is a very common requirement (\emph{Literal Ranges}\footnote{\emph{R-45-RANGES-OF-RDF-LITERAL-VALUES}}) 
+- disco:CategoryStatistics resources, e.g., point to percentage values via the data property \emph{disco:percentage}; 
+these values must be of the datatype \emph{xsd:double} and must be between 0 and 100.
 
 -----
 
-The \emph{Primary Key Properties} constraint is often useful to declare a given (datatype) property as the "primary key" of a class, so that a system can enforce uniqueness and also automatically build URIs from user input and data imported from relational databases or spreadsheets.. 
-Within the context of \emph{Disco}, resources are uniquely identified by the property \emph{adms:identifier},
+It is often useful to declare a given (data) property as the \emph{primary key} of a class (\emph{Primary Key Properties}), so that a system can enforce uniqueness and also automatically build URIs from user inputs and imported data. 
+In \emph{Disco}, resources are uniquely identified by the property \emph{adms:identifier},
 which is therefore inverse-functional
 $(\ms{funct identifier}\sp{\overline{\ }})$,
-i.e. for each \emph{rdfs:Resource x}, there can be at most one distinct \emph{rdfs:Resource y} such that \emph{y} is connected by \emph{adms:identifier} to \emph{x}.
-Keys, however, are even more general, i.e., a generalization of inverse-functional properties\footnote{\emph{R-58-INVERSE-FUNCTIONAL-OBJECT-PROPERTIES}} \cite{Schneider2009}.
-A key can be a data or an object property, or a chain of properties.
+i.e. for each \emph{rdfs:Resource x}, there can be at most one distinct \emph{rdfs:Resource y} such that \emph{y} is connected by \emph{adms:identifier$\sp{\overline{\ }}$} to \emph{x}.
+Keys, however, are even more general than inverse-functional properties\footnote{\emph{R-58-INVERSE-FUNCTIONAL-OBJECT-PROPERTIES}},
+as a key can be a data, an object property, or a chain of properties \cite{Schneider2009}.
 For this generalization purposes, as there are different sorts of key, and as keys can lead to undecidability, 
-DL is extended with \emph{key boxes} and a special \emph{keyfor} (\ms{identifier \ms{keyfor} Resource}) construct\cite{Lutz2005}.
+DL is extended with \emph{key boxes} and a special \emph{keyfor} construct (\ms{identifier \ms{keyfor} Resource}) \cite{Lutz2005}.
+
+-----
+
+In many cases, resources must be members of listed controlled vocabularies\footnote{\emph{R-32-MEMBERSHIP-OF-RDF-OBJECTS-IN-CONTROLLED-VOCABULARIES}, 
+\emph{R-39-MEMBERSHIP-OF-RDF-LITERALS-IN-CONTROLLED-VOCABULARIES}}.
+\emph{disco:SummaryStatistics}, e.g., can only have \emph{disco:summaryStatisticType} relationships to \emph{skos:Concept}s which must be members of the controlled vocabulary \emph{ddicv:SummaryStatisticType} which is a \emph{skos:ConceptScheme}.
+
+\begin{DL}
+SummaryStatistics $\sqsubseteq$ $\forall summaryStatisticType.A$ \\
+$A \equiv Concept \sqcap \forall inScheme . B$ \\
+$B \equiv ConceptScheme \sqcap \{SummaryStatisticType\}$
+\end{DL}
+
+-----
+
+Depending on property datatypes,
+two different literal values have
+a specific ordering with respect to an operator. 
+\emph{P1} and \emph{P2} are the data properties we need to compare and 
+\emph{OP} is the comparison operator (e.g. \textless, \textless=, \textgreater, \textgreater=, =, !=) (\emph{Literal Value Comparison}\footnote{\emph{R-43-LITERAL-VALUE-COMPARISON}}).
+\emph{disco:startDate}s, e.g., must be before (\emph{\textless}) \emph{disco:endDate}s.
+To validate this constraint we bind the variables (P1: \emph{disco:startDate}, P2: \emph{disco:endDate}, OP: \emph{\textless}).
+
+-----
+
+Objects/literals can be ordered\footnote{\emph{R-121-SPECIFY-ORDER-OF-RDF-RESOURCES}, \emph{R-217-DEFINE-ORDER-FOR-FORMS/DISPLAY}} for given properties.
+\emph{Disco }variables, questions, and codes/categories are typically organized in a particular order. 
+If codes/categories of a \emph{disco:Representation} of a \emph{disco:Variable} should be ordered, the variable representation should also be of the type \emph{skos:OrderedCollection} containing multiple codes/categories (each represented as \emph{skos:Concept}) in a \emph{skos:memberList}. 
+
+-----
+
+{\em Mathematical Operations}\footnote{{\em R-42-MATHEMATICAL-OPERATIONS}, {\em R-41-STATISTICAL-COMPUTATIONS}} (e.g. date calculations and statistical computations like average, mean, and sum) are performed to ensure the integrity of data models.
+The sum of {\em disco:percentage} (datatype: {\em xsd:double}) values of all codes ({\em skos:Concept}s) of a code list ({\em skos:ConceptScheme} or {\em skos:OrderedCollection}), serving as representation of a particular {\em disco:Variable} must exactly be 100.
+
+-----
 
 \textbf{DCAT Validation}
 
@@ -484,39 +524,68 @@ Constraints of some constraint types are directly and automatically derived from
 This way, \emph{property domains and ranges, universal and existential quantifications, minimum, maximum, and exact cardinality restrictions} are defined for each property of vocabularies against which one wish to validate.
 As these constraints directly depend on the intended semantics of data models, associated severity levels are very strong.
 
-{\em Property Domains}\footnote{{\em R-25-OBJECT-PROPERTY-DOMAIN}, {\em R-26-DATA-PROPERTY-DOMAIN}} and {\em Ranges}\footnote{{\em R-28-OBJECT-PROPERTY-RANGE}, {\em R-35-DATA-PROPERTY-RANGE}}restrict domains and ranges of properties.
-Only {\em skos:ConceptSchemes}, e.g., can have {\em skos:hasTopConcept} relationships (\ms{$\exists$ hasTopConcept.$\top$ $\sqsubseteq$ ConceptScheme}) and
-{\em xkos:belongsTo} relationships can only point to instances of the class {\em skos:Concept} (\ms{$\top$ $\sqsubseteq$ $\forall$ belongsTo.Concept}).
-A \emph{universal quantification}\footnote{{\em R-91-UNIVERSAL-QUANTIFICATION-ON-PROPERTIES}} contains all those individuals that are connected by a property only to individuals/literals that are instances of particular classes  or data ranges.
-Only {\em dcat:Catalogs}, e.g., can have {\em dcat:dataset} relationships to {\em dcat:Datasets} (\ms{Catalog $\sqsubseteq$ $\forall$ dataset.Dataset}).
-An \emph{existential quantification}\footnote{{\em R-86-EXISTENTIAL-QUANTIFICATION-ON-PROPERTIES}} contains all those individuals that are connected by a property to individuals/literals that are instances of given classes or data ranges.
+\emph{Property Domains}\footnote{\emph{R-25-OBJECT-PROPERTY-DOMAIN}, \emph{R-26-DATA-PROPERTY-DOMAIN}} and \emph{Ranges}\footnote{\emph{R-28-OBJECT-PROPERTY-RANGE}, \emph{R-35-DATA-PROPERTY-RANGE}}restrict domains and ranges of properties.
+Only \emph{skos:ConceptSchemes}, e.g., can have \emph{skos:hasTopConcept} relationships (\ms{$\exists$ hasTopConcept.$\top$ $\sqsubseteq$ ConceptScheme}) and
+\emph{xkos:belongsTo} relationships can only point to instances of the class \emph{skos:Concept} (\ms{$\top$ $\sqsubseteq$ $\forall$ belongsTo.Concept}).
+A \emph{universal quantification}\footnote{\emph{R-91-UNIVERSAL-QUANTIFICATION-ON-PROPERTIES}} contains all those individuals that are connected by a property only to individuals/literals that are instances of particular classes  or data ranges.
+Only \emph{dcat:Catalogs}, e.g., can have \emph{dcat:dataset} relationships to \emph{dcat:Datasets} (\ms{Catalog $\sqsubseteq$ $\forall$ dataset.Dataset}).
+An \emph{existential quantification}\footnote{\emph{R-86-EXISTENTIAL-QUANTIFICATION-ON-PROPERTIES}} contains all those individuals that are connected by a property to individuals/literals that are instances of given classes or data ranges.
 Every \emph{qb:SliceKey}, e.g., must be associated with (\emph{qb:sliceKey}) a \emph{qb:DataStructureDefinition} (\ms{SliceKey $\sqsubseteq$ $\exists$ sliceKey$^{-}$.DataStructureDefinition}).
+
 \emph{Minimum/maximum/exact qualified cardinality restrictions}\footnote{\emph{R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES, \\ R-76-MAXIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES, \\ R-74-EXACT-QUALIFIED-CARDINALITY-ON-PROPERTIES}} contain all those individuals that are connected by a property to at least/at most/exactly n different individuals/literals that are instances of particular classes or data ranges.
 \emph{Minimum qualified cardinality restrictions} are defined for each property of multiple vocabularies like \emph{Disco}.
-A \emph{disco:Questionnaire}, e.g., has at least one {\em disco:question} relationship to {\em disco:Questions} (\ms{Questionnaire $\sqsubseteq$ $\geq$1 question.Question}),
-a {\em disco:Variable} has at most one {\em disco:concept} relationship to a theoretical concept ({\em skos:Concept}) (\ms{Variable $\sqsubseteq$ $\leq$1 concept.Concept}), and every \emph{qb:DataSet} has (\emph{qb:structure}) exactly one associated \emph{qb:DataStructureDefinition} (\ms{DataSet $\sqsubseteq$ $\geq$1 structure.DataStructureDefinition $\sqcap$ $\leq$1 structure.DataStructureDefinition}).
+A \emph{disco:Questionnaire}, e.g., has at least one \emph{disco:question} relationship to \emph{disco:Questions} (\ms{Questionnaire $\sqsubseteq$ $\geq$1 question.Question}),
+a \emph{disco:Variable} has at most one \emph{disco:concept} relationship to a theoretical concept (\emph{skos:Concept}) (\ms{Variable $\sqsubseteq$ $\leq$1 concept.Concept}), and every \emph{qb:DataSet} has (\emph{qb:structure}) exactly one associated \emph{qb:DataStructureDefinition} (\ms{DataSet $\sqsubseteq$ $\geq$1 structure.DataStructureDefinition $\sqcap$ $\leq$1 structure.DataStructureDefinition}).
 %\footnote{\emph{DATA-CUBE-C-EXACT-QUALIFIED-CARDINALITY-RESTRICTIONS-02}}.
+For particular data properties, values of predefined languages must be stated for determined number of times\footnote{{\em R-49-RDF-LITERALS-HAVING-AT-MOST-ONE-LANGUAGE-TAG}, {\em R-48-MISSING-LANGUAGE-TAGS}}.
+Some controlled vocabularies contain literals in natural language, but without information what language has actually been used. Language tags might also not conform to language standards. 
+Some concepts in a thesaurus are labeled in only one language, some in multiple languages. It may be desirable to have each concept labeled in each of the languages that also are used on the other concepts. This is not always possible, but incompleteness of language coverage for some concepts can indicate shortcomings of the vocabulary
+(severity level: informational) \cite{MaderHaslhoferIsaac2012}.
 
 All properties, not having the same domain and range classes, are defined to be pairwise disjoint
 (\emph{disjoint properties}\footnote{\emph{R-9-DISJOINT-PROPERTIES}}), stating that no individual \emph{x} can be connected to an individual/literal \emph{y} by disjoint properties like \emph{phdd:isStructuredBy} and \emph{phdd:column} ($isStructuredBy \sqsubseteq \neg column$).
-All \emph{Disco} classes are defined to be pairwise disjoint ({\em Disjoint Classes}\footnote{{\em R-7-DISJOINT-CLASSES}}; e.g. \ms{Study $\sqcap$ Variable $\sqsubseteq$ $\perp$}),
+All \emph{Disco} classes are defined to be pairwise disjoint (\emph{Disjoint Classes}\footnote{\emph{R-7-DISJOINT-CLASSES}}; e.g. \ms{Study $\sqcap$ Variable $\sqsubseteq$ $\perp$}),
 i.e. no individual can be at the same time an instance of more than one disjoint class.
 It is a common requirement to narrow down the value space of properties by an exhaustive enumeration of valid values.  
-\emph{Allowed values}\footnote{{\em R-30-ALLOWED-VALUES-FOR-RDF-OBJECTS}, 
-{\em R-37-ALLOWED-VALUES-FOR-RDF-LITERALS}} for properties can be IRIs (matching one or multiple patterns), any literals, allowed literals (e.g. 'red' 'blue' 'green'), and typed literals of one or multiple type(s) (e.g. \emph{xsd:string}) - 
-{\em disco:CategoryStatistics}, e.g., can only have {\em disco:computationBase} relationships to the values \emph{valid} and \emph{invalid} of the datatype {\em rdf:langString} (\ms{CategoryStatistics $\equiv$ $\forall$ computationBase.\{valid,invalid\} $\sqcap$ langString}).
-
+\emph{Allowed values}\footnote{\emph{R-30-ALLOWED-VALUES-FOR-RDF-OBJECTS}, 
+\emph{R-37-ALLOWED-VALUES-FOR-RDF-LITERALS}} for properties can be IRIs (matching one or multiple patterns), any literals, allowed literals (e.g. 'red' 'blue' 'green'), and typed literals of one or multiple type(s) (e.g. \emph{xsd:string}) - 
+\emph{disco:CategoryStatistics}, e.g., can only have \emph{disco:computationBase} relationships to the values \emph{valid} and \emph{invalid} of the datatype \emph{rdf:langString} (\ms{CategoryStatistics $\equiv$ $\forall$ computationBase.\{valid,invalid\} $\sqcap$ langString}).
 
 Constraints of some constraint types can be derived from vocabularies' data models for which reasoning can be performed prior to validation which enables to resolve possible constraint violations.
-\emph{Subsumption}\footnote{{\em R-100-SUBSUMPTION}} states that the class \emph{C1} is a sub-class of the class \emph{C2} - \emph{C1} is more specific than \emph{C2}, 
+\emph{Subsumption}\footnote{\emph{R-100-SUBSUMPTION}} states that the class \emph{C1} is a sub-class of the class \emph{C2} - \emph{C1} is more specific than \emph{C2}, 
 i.e. each resource of the class \emph{C1} must also be part of the class extension of \emph{C2}. 
-All {\em disco:Universe}s, e.g., must also be {\em skos:Concept}s (\ms{Universe $\sqsubseteq$ Concept}).
-{\em Sub Properties}\footnote{\emph{R-54-SUB-OBJECT-PROPERTIES}, \emph{R-54-SUB-DATA-PROPERTIES}} state that the property \emph{P1} is a sub-property of the property \emph{P2} - that is, if individual \emph{x} is connected by \emph{P1} to individual/literal \emph{y}, then \emph{x} is also connected by \emph{P2} to \emph{y}. 
-If \emph{x} is connected by {\em disco:fundedBy} to \emph{y}, then \emph{x} is also connected by {\em dcterms:contributor} to \emph{y} (\ms{fundedBy $\sqsubseteq$ contributor}).
-\emph{Asymmetric object properties}\footnote{{\em R-62-ASYMMETRIC-OBJECT-PROPERTIES}} restrict that if individual \emph{x} is connected by the object property \emph{OP} to individual \emph{y}, then \emph{y} cannot be connected by \emph{OP} to \emph{x}. 
+All \emph{disco:Universe}s, e.g., must also be \emph{skos:Concept}s (\ms{Universe $\sqsubseteq$ Concept}).
+\emph{Sub Properties}\footnote{\emph{R-54-SUB-OBJECT-PROPERTIES}, \emph{R-54-SUB-DATA-PROPERTIES}} state that the property \emph{P1} is a sub-property of the property \emph{P2} - that is, if individual \emph{x} is connected by \emph{P1} to individual/literal \emph{y}, then \emph{x} is also connected by \emph{P2} to \emph{y}. 
+If \emph{x} is connected by \emph{disco:fundedBy} to \emph{y}, then \emph{x} is also connected by \emph{dcterms:contributor} to \emph{y} (\ms{fundedBy $\sqsubseteq$ contributor}).
+\emph{Asymmetric object properties}\footnote{\emph{R-62-ASYMMETRIC-OBJECT-PROPERTIES}} restrict that if individual \emph{x} is connected by the object property \emph{OP} to individual \emph{y}, then \emph{y} cannot be connected by \emph{OP} to \emph{x}. 
 \emph{Asymmetric object properties} are defined for each asymmetric object property for which a semantically equivalent object property pointing from the other direction may also be possible to be specified in the appropriate vocabulary.
-A {\em disco:Variable}, e.g., may be based on (\emph{disco:basedOn}) a {\em disco:RepresentedVariable}.
-A {\em disco:RepresentedVariable}, however, cannot be based on a {\em disco:Variable} (\ms{$basedOn \sqcap basedOn^{-} \sqsubseteq \bot$}).
+A \emph{disco:Variable}, e.g., may be based on (\emph{disco:basedOn}) a \emph{disco:RepresentedVariable}.
+A \emph{disco:RepresentedVariable}, however, cannot be based on a \emph{disco:Variable} (\ms{$basedOn \sqcap basedOn^{-} \sqsubseteq \bot$}).
+\emph{Default values}\footnote{{\em R-31-DEFAULT-VALUES-OF-RDF-OBJECTS}, {\em R-38-DEFAULT-VALUES-OF-RDF-LITERALS}} for objects/literals of given prooperties are inferred automatically when properties are not stated, in order to pre-populate input forms and to insert a required property that is missing in a web service call.
+The value \emph{true} for the property {\em disco:isPublic} ({\em xsd:boolean}) indicates that the data set ({\em disco:LogicalDataSet}) can be accessed by anyone.
+Per default, access to data sets should be restricted (\emph{false}).
+
+-----
+
+For future vocabulary versions, out-dated classes and properties can be marked as deprecated.
+There are constraint types (\emph{context-specific valid classes and properties}) to specify which classes and properties are valid in which context (here a specific vocabulary version).
+Many properties are not necessarily required but recommended within a particular context (\emph{recommended properties}).
+The property {\em skos:notation} is not mandatory for {\em disco:Variable}s, but recommended to indicate variable names.
+
+-----
+
+It has to be ensured that a value is valid for its datatype (\emph{Value is Valid for Datatype}), e.g., 
+that a date is really a date, or that a \emph{xsd:nonNegativeInteger} value is not negative. 
+It is checked if all literals of {\em xsd:date} properties are really dates (e.g. {\em disco:startDate}, {\em disco:endDate}, {\em dcterms:date}).
+
+-----
+
+The validation of instances data (direct or indirect) exploits the sub-class or sub-property link in a given ontology (\emph{Use Sub-Super Relations in Validation}).
+This validation can indicate when the data is verbose (redundant) or expressed at a too general level, and could thus be improved.
+If \emph{dcterms:coverage} and one of its sub-properties (\emph{dcterms:spatial}, \emph{dcterms:temporal}) are present,
+it is checked that \emph{dcterms:coverage} is not redundant with its sub-properties. 
+
+-----
 
 \section{Implementation}
 
@@ -553,7 +622,7 @@ It cannot be validated that if an element has a specific value, then certain chi
 \url{https://msdn.microsoft.com/en-us/library/aa468554.aspx}
 
 \textbf{RDF Data Cube Vocabulary.}
-A well-formed RDF Data Cube is an a RDF graph describing one or more instances of {\em qb:DataSet} for which each of the 22 defined integrity constraints\footnote{http://www.w3.org/TR/vocab-data-cube/\#wf} passes.
+A well-formed RDF Data Cube is an a RDF graph describing one or more instances of \emph{qb:DataSet} for which each of the 22 defined integrity constraints\footnote{http://www.w3.org/TR/vocab-data-cube/\#wf} passes.
 Each integrity constraint is expressed as narrative prose and, where possible, a SPARQL ASK query or query template. 
 If the ASK query is applied to an RDF graph then it will return true if that graph contains one or more Data Cube instances which violate the corresponding constraint \cite{CyganiakReynolds2014}.
 
